# Flowcore

./: .gitignore  CHANGELOG.md  DISCLAIMER.md  LICENCE  README.md
Flowmini/: CHANGELOG.md  CURRENT.md  Flowcore_type_system_foundation.md  README.md  VERSION_INDEX.md  backlog.txt
Flowmini/flowmini_v10_compound_expressions/: CMakeLists.txt  README.md
Flowmini/flowmini_v10_compound_expressions/examples/: bubblesort_compare_swap.flow  bubblesort_indexed_structured.flow  factorial_structured.flow
Flowmini/flowmini_v10_compound_expressions/src/: flowmini_lexer.cpp  flowmini_parser.cpp  flowmini_runtime.cpp
Flowmini/flowmini_v12_fn_value_ports/: README.md
Flowmini/flowmini_v12_fn_value_ports/examples/: capable.flow  compound_expression_demo.flow  cube_demo.flow  forwarding.flow  nested_break_continue.flow  power2_general.flow
Flowmini/flowmini_v12_fn_value_ports/src/: flowmini_parser.cpp  flowmini_payload.cpp
Flowmini/flowmini_v13_imports/: README.md
Flowmini/flowmini_v13_imports/examples/: README_structured_examples.md  array_demo.flow  bad_if_empty.flow  bad_shadowing.flow  bad_unreachable_after_break.flow  bubblesort_compound.flow  collatz_general.flow  countdown_structured.flow  fibonacci_general.flow  fn_iterative_factorial.flow  sum_list_sugar.flow
Flowmini/flowmini_v13_imports/src/: flowmini_parser.cpp  flowmini_runtime.cpp
Flowmini/flowmini_v13_imports/std/: collatz.flow  main_bad.flow
Flowmini/flowmini_v15_abi_bindings/: README.md
Flowmini/flowmini_v15_abi_bindings/examples/: abi_libc_demo.flow  bad_break_outside_loop.flow  bad_continue_outside_loop.flow  bad_list_unknown.flow  bad_type_narrowing.flow  first_even_break.flow  (+3 more)
Flowmini/flowmini_v16_abi_pointer_contracts/: CMakeLists.txt  README.md
Flowmini/flowmini_v19_comments/: CMakeLists.txt  README.md
Flowmini/flowmini_v1_pattern_introduction/: README.md
Flowmini/flowmini_v20_bool/: README.md
Flowmini/flowmini_v21_structural_bridge/: README.md
Flowmini/flowmini_v22_unit_kinds/: CMakeLists.txt
Flowmini/flowmini_v22_unit_kinds/subprojects/SymbolTable/SymbolTable_v1_1/: CMakeLists.txt
Flowmini/flowmini_v22_unit_kinds/subprojects/SymbolTable/SymbolTable_v1_1/include/symboltable/: DefinitionState.hpp  Factoid.hpp
Flowmini/flowmini_v22_unit_kinds/subprojects/SymbolTable/SymbolTable_v1_1/src/: SymbolPolicy.cpp
Flowmini/flowmini_v23_token_tree_bridge/subprojects/TokenTree/tokentree_v1/: CMakeLists.txt
Flowmini/flowmini_v23_token_tree_parser_bridge/: README.md
Flowmini/flowmini_v24_explicit_ast/: CMakeLists.txt
Flowmini/flowmini_v24_explicit_ast/examples/fail/: bad_break_outside_loop.flow  bad_fn_wrong_arg_count.flow  bad_import_main.flow  bad_record_no_such_field.flow  bad_record_unknown_field.flow  bad_type_unknown_base.flow  bad_unterminated_block_comment.flow
Flowmini/flowmini_v24_explicit_ast/examples/pass/: abi_libc_demo.flow  abi_struct_demo.flow  array_demo.flow  bubblesort_compound.flow  capable.flow  comment_demo.flow  compound_expression_demo.flow  countdown_structured.flow  fn_bool_demo.flow  internal_nested_record_demo.flow  internal_record_demo.flow
Flowmini/flowmini_v24_explicit_ast/examples/support/: bubblesort_list.flow  sum_list.flow  sum_list_sugar.flow
Flowmini/flowmini_v24_explicit_ast/include/: flowmini_ast.h  flowmini_ast_builder.h
Flowmini/flowmini_v24_explicit_ast/src/: flow_common.cpp  flowmini_ast.cpp  flowmini_ast_builder.cpp  main.cpp
Flowmini/flowmini_v24_explicit_ast/std/: collatz.flow  main_bad.flow
Flowmini/flowmini_v24_explicit_ast/std/abi/: pointers.flow  testabi.flow
Flowmini/flowmini_v24_explicit_ast/subprojects/SymbolTable/SymbolTable_v1_1/include/symboltable/: SourceLocation.hpp
Flowmini/flowmini_v24_explicit_ast/subprojects/SymbolTable/SymbolTable_v1_1/src/: SymbolTable.cpp
Flowmini/flowmini_v24_explicit_ast/subprojects/TokenTree/tokentree_v1/include/: tokentree.h
Flowmini/flowmini_v24_explicit_ast/subprojects/TokenTree/tokentree_v1/tests/: test_main.cpp
Flowmini/flowmini_v24_explicit_ast/subprojects/testabi/: CMakeLists.txt
Flowmini/flowmini_v24_explicit_ast/tests/expected/diagnostics/: bad_abi_type_missing_contract.contains  bad_array_rank.contains  bad_fn_recursion.contains  bad_fn_wrong_arg_count.contains  bad_import_cycle.contains  bad_record_missing_field.contains  bad_shadowing.contains  bad_type_narrowing.contains  bad_undeclared_assignment.contains  bad_uninitialized.contains  bad_unreachable_after_break.contains  bad_unterminated_block_comment.contains
Flowmini/flowmini_v2_general/: README.md
Flowmini/flowmini_v3_layers/: README.md
Flowmini/flowmini_v4_lists/: README.md
Flowmini/flowmini_v5_frontend/: README.md
Flowmini/flowmini_v6_scopes/: README.md
Flowmini/flowmini_v7_if_else/: README.md
Flowmini/flowmini_v8_list_indexing/: README.md
Flowmini/flowmini_v9_break_continue/: README.md
Pattern_explored/: CHANGELOG.md  README.md
Pattern_explored/refactored_flow/: CMakeLists.txt  README_REFACTOR.md  base64_main.cpp  base64_stage.cpp  base64_stage.h  bitart_main.cpp  bitart_stage.cpp  bitart_stage.h  collatz_main.cpp  collatz_pipeline.cpp  collatz_pipeline.h  hex_main.cpp  hex_stage.cpp  hex_stage.h
Pattern_explored/src/: Base64  art.bart  bart  bart.cpp  base64.cpp  build.sh  flow_exec_collatz  flow_exec_collatz.cpp  flow_policy_emvelope_pattern.md  hex  hex.cpp  restored.txt
docs/: index.md
docs/architecture/: README.md  flowcore-core-promise.md
docs/flowmini/: README.md  roadmap.md  testing.md
docs/notes/: Design_Flowcore_as_scalable_distributed_infrastructure_graph.md  Design_Strudel-style_grouping_syntax_as_inspiration_for_finegrain_Flowcore_orcestration_v1.md  Design_Strudel_as_inspiration_for_Flowcore_orcestration_v1.md
docs/sessions/: 2026-06-23-session.md  2026-06-flowmini-v22-unit-kinds.md
subprojects/: README.md
subprojects/SymbolTable/: CHANGELOG.md  README.md
subprojects/TokenTree/: CHANGELOG.md  README.md
tools/: bootstrap-doc-structure.sh  classify-flowmini-examples.sh  enter-flowcore-session.sh  run-flowmini-test-suite.sh  store_and_ship_cleanup.sh
(+290 files in other folders)
